new tests, cleaning up syntax logic

--- a/samples/test.html
+++ b/samples/test.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 
 <head>
 
@@ -6,7 +6,7 @@
 	<title>VSCode Tests</title>
 	<link href="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" rel="stylesheet" />
 	<style type="text/css">
-
+	
 		body {
 			color: purple;
 			background-color: #d8da3d;
@@ -45,6 +45,18 @@
 		<span class=octicon></span>
 		<span class="signed-in-tab-flash">You signed in with another tab or window. <a href="">Reload</a> to refresh your session.</span>
 		<span class="signed-out-tab-flash">You signed out in another tab or window. <a href="">Reload</a> to refresh your session.</span>
+	</div>
+
+	<div>
+
+		<a href="value">test</a>
+		
+		<svg> </svg>
+
+		<$widget> content </$widget>
+
+		<% IF %>
+
 	</div>
 </body>
 </html>
