--- a/tests/samples/test.html
+++ b/tests/samples/test.html
@@ -1,6 +1,21 @@
+<html lang=[[en]]>
+
+<html lang={{en}}>
+
+<html lang=en>
+
+<html lang='en'>
+
 <html lang="en">
 
 <head>
+
+	<!-- Comment: Simple Wikitext HTML Sample -->
+
+	<!-- 
+		Comment: 
+		Multi-line Wikitext HTML Sample
+	-->
 
 	<meta charset="utf-8"/>
 	<title>VSCode Tests</title>
@@ -50,6 +65,8 @@
 	<div>
 
 		<a href="value">test</a>
+
+		<button onclick="myFunction()">Click me</button>
 		
 		<svg> </svg>
 
