widgets look good

--- a/tests/samples/test.html
+++ b/tests/samples/test.html
@@ -67,6 +67,10 @@
 		<a href="value">test</a>
 
 		<button onclick="myFunction()">Click me</button>
+
+		<img/>
+
+		<img></img>
 		
 		<svg> </svg>
 
