fixed html bugs so far

--- a/tests/samples/test.html
+++ b/tests/samples/test.html
@@ -6,7 +6,9 @@
 
 <html lang='en'>
 
-<html lang="en">
+<html 
+
+lang="en">
 
 <head>
 
@@ -31,6 +33,9 @@
 
 <body>
 
+
+	<a lang='en'> content </a>
+	
 	<div id="mocha"></div>
 
 	<!--<script src="https://cdn.rawgit.com/jquery/jquery/2.1.4/dist/jquery.min.js"></script>
